# chronicle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml
.github/: labeler.yml  renovate.json
.github/workflows/: format.yml  lint.yml
backend/: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 6379458fe85b_create_items_table.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: __init__.py  items.py
backend/app/core/: __init__.py  config.py  database.py  lifespan.py
backend/app/models/: __init__.py  base.py  item.py
backend/app/modules/items/domain/: entities.py  value_objects.py
backend/app/repositories/: __init__.py  item_repo.py
backend/app/schemas/: __init__.py  item.py
backend/app/services/: item_service.py
backend/app/shared/domain/: domain_id.py
backend/docker/: healthcheck.py  startup.sh
backend/src/app/entrypoints/: exception_handlers.py
backend/src/app/entrypoints/api/: asgi.py  dependencies.py  main.py
backend/src/app/entrypoints/api/middlewares/: __init__.py  access_logger.py  app_headers.py  request_id.py
backend/src/app/entrypoints/api/system/: router.py  schemas.py
backend/src/app/entrypoints/api/v1/: router.py
backend/src/app/entrypoints/api/v1/items/: dependencies.py  router.py  schemas.py
backend/src/app/features/items/application/: services.py
backend/src/app/features/items/application/interfaces/: repository.py
backend/src/app/features/items/application/use_cases/: create_item.py  delete_item.py  get_item.py  list_items.py
backend/src/app/features/items/domain/: entities.py  ports.py  value_objects.py
backend/src/app/features/items/infrastructure/: repositories.py
backend/src/app/features/items/persistence/: in_memory_repository.py
backend/src/app/infrastructure/wiring/: bootstrap.py
backend/src/app/modules/items/domain/: entities.py
backend/src/app/shared/: bootstrap.py
backend/src/app/shared/application/interfaces/: use_case.py
backend/src/app/shared/config/: __init__.py  api.py  app_info.py  logging_.py
backend/src/app/shared/domain/: __init__.py  exceptions.py  ports.py  value_objects.py
backend/src/app/shared/domain/ports/: __init__.py  domian_entity.py  unit_of_work.py  value_object.py
backend/src/app/shared/domain/value_objects/: __init__.py  domain_id.py
backend/src/app/shared/infrastructure/: uow.py
backend/src/app/shared/infrastructure/unit_of_work/: __init__.py
backend/src/app/shared/logging_/: __init__.py  semantic_sorter.py
backend/src/app/shared/types/: __init__.py  csv_.py  networks.py
backend/tests/: conftest.py  test_architecture.py  test_fixtures.py
backend/tests/entrypoints/api/: test_access_logger.py  test_app_headers.py  test_asgi.py  test_request_id.py
backend/tests/entrypoints/api/system/: test_system_router.py
backend/tests/entrypoints/api/v1/: test_items.py
backend/tests/entrypoints/api/v1/items/: test_items_dependencies.py  test_items_router.py  test_items_use_cases.py
backend/tests/features/items/: test_items_entity.py  test_items_use_cases.py  test_services.py
backend/tests/infrastructure/wiring/: test_bootstrap.py
backend/tests/shared/config/: test_app_info.py  test_config.py
backend/tests/shared/domain/: test_value_objects.py
backend/tests/shared/logging_/: test_semantic_sorter.py
backend/tests/shared/types/: test_types.py
frontend/: .dockerignore  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/items/: +page.svelte
frontend/src/routes/items/[id]/: +page.svelte
versioning/: pyproject.toml
versioning/src/menagerist_versioning/: __init__.py
versioning/tests/: test_versioning.py
