[project]
name = "menagerist"
dynamic = ["version"]
description = "A lightweight, self-hostable personal knowledge graph for collectors."
authors = [{ name = "Sam Cork" }]
maintainers = [{ name = "Sam Cork" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "granian>=2.7.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.45",
]

[dependency-groups]
dev = [
    "granian[reload]>=2.7.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[project.urls]
Repository = "https://github.com/samcorky/menagerist"
Issues = "https://github.com/samcorky/menagerist/issues"
License = "https://github.com/samcorky/menagerist/blob/main/LICENSE"

[tool.menagerist]
display-name = "Menagerist"

[tool.uv.sources]
menagerist-versioning = { workspace = true }

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0", "menagerist-versioning>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.version.raw-options]
search_parent_directories = true
version_scheme = "menagerist_calver"
local_scheme = "no-local-version"

[tool.mypy]
mypy_path = "src"
files = ["src/app", "tests"]

[[tool.mypy.overrides]]
module = ["granian.*"]
ignore_missing_imports = true

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.coverage.run]
source = ["src/app"]
omit = [
    "tests/*",
    "**/__init__.py",
    "src/app/migrations/*",
]
