[project]
name = "menagerist"
dynamic = ["version"]
description = "A lightweight, self-hostable personal knowledge graph for collectors."

authors = [
    { name = "Sam Cork" }
]

maintainers = [
    { name = "Sam Cork" }
]

license = "Apache-2.0"
license-files = [
    "LICENSE"
]

requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi==0.136.0",
    "granian==2.7.4",
    "pydantic-settings==2.14.0",
    "sqlalchemy[asyncio]==2.0.49",
    "structlog==25.5.0",
]

[dependency-groups]
dev = [
    "granian[reload]==2.7.4",
    "httpx==0.28.1",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "rich==15.0.0",
    "ruff==0.15.12",
]

[project.urls]
Repository = "https://github.com/samcorky/menagerist"
Issues = "https://github.com/samcorky/menagerist/issues"
License = "https://github.com/samcorky/menagerist/blob/main/LICENSE"

[tool.menagerist]
display-name = "Menagerist"

[build-system]
requires = [
    "hatchling==1.29.0",
    "hatch-vcs==0.5.0",
    "calver-scm==1.4.1"
]

build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.version.raw-options]
search_parent_directories = true
version_scheme = "calver-scm"
local_scheme = "no-local-version"

[tool.calver-scm]
stable = false

[tool.uv]
required-version = ">=0.11.7"
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}, { dir = "src" }]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"
files = ["src/app", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["granian.*"]
ignore_missing_imports = true

[tool.ruff]
fix = true
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "N",      # pep8-naming
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "D",      # pydocstyle — replaces pydocstyle tool
    "RUF",    # ruff-specific rules
    "PT",     # flake8-pytest-style
    "ANN",    # flake8-annotations
    "C901",     # flake8-cognitive-complexity
    "TID252",    # relative-imports
]
ignore = [
    # formatter conflicts per https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "Q004",   # unnecessary-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC002", # multi-line-implicit-string-concatenation
    "TC006",
    # project-specific
    "B008",   # FastAPI Depends() in defaults
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D107",   # missing docstring in __init__
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "PT", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--cov=src/app",
    "--cov-report=term-missing",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: fast, no infrastructure",
    "integration: requires database",
    "e2e: full stack",
    "architecture: tests for architectural rules",
    "domain: tests for domain logic",
]

[tool.coverage.run]
source = ["src/app"]
omit = [
    "tests/*",
    "**/__init__.py",
]
branch = true

[tool.coverage.report]
#fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
