[project]
name = "menagerist-versioning"
version = "1.0.0"
description = "Custom versioning plugin for Menagerist"
requires-python = ">=3.14"
dependencies = [
    "setuptools-scm>=10.0.5",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/menagerist_versioning"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "setuptools-scm>=10.0.5",
]

[project.entry-points."setuptools_scm.version_scheme"]
menagerist_calver = "menagerist_versioning:menagerist_calver"

[tool.mypy]
mypy_path = "src"
files = ["src/menagerist_versioning", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["menagerist_versioning"]

[tool.coverage.run]
source = ["src/menagerist_versioning"]
omit = [
    "tests/*",
    "**/__init__.py",
]
